--- a/gcp/src/main/resources/application.properties
+++ b/gcp/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=gcp
 spring.cloud.gcp.project.id = primordial-veld-442819-k2
 spring.cloud.gcp.pubsub.project-id: primordial-veld-442819-k2
-#spring.cloud.gcp.credentials.location = classpath:primordial-veld-442819-k2-729b0c258a0c.json
+spring.cloud.gcp.credentials.location = classpath:primordial-veld-442819-k2-729b0c258a0c.json
 spring.cloud.gcp.spanner.instance-id=bf-spanner
 spring.cloud.gcp.spanner.database=brandfolder
 spring.cloud.gcp.bucket=bf-response-bucket
