--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,3 +16,6 @@ steps:
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a' 
       - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
+      
+options:
+  logging: CLOUD_LOGGING_ONLY
