--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,26 @@
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest', '--build-arg=JAR_FILE=my-spring-boot-app.jar','.']
-    id: 'Build Docker Image'
-    
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest']
-    id: 'Push Docker Image'
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    - 'build'
+    - '-t'
+    - 'gcr.io/$PROJECT_ID/my-spring-boot-app:latest'
+    - '.'
 
-  - name: 'gcr.io/cloud-builders/kubectl'
-    args:
-      - 'set'
-      - 'image'
-      - 'deployment/spring-boot-deployment'
-      - 'spring-boot-container=gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest'
-    env:
-      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a' 
-      - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
-      
+# Step 2: Push the Docker image to Container Registry
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    - 'push'
+    - 'gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest'
+
+- name: 'gcr.io/cloud-builders/kubectl'
+  args:
+    - 'set'
+    - 'image'
+    - 'deployment/spring-boot-deployment'
+    - 'spring-boot-container=gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest'
+  env:
+    - 'CLOUDSDK_COMPUTE_ZONE=us-central1-a' 
+    - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
+    
 options:
   logging: CLOUD_LOGGING_ONLY
