--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,10 @@
 steps:
+- name: 'maven:3.8.7-eclipse-temurin-17-alpine'
+  id: 'Build JAR'
+  entrypoint: 'mvn'
+  args: ['clean', 'package', '-DskipTests']
+
+steps:
 - name: 'gcr.io/cloud-builders/docker'
   args:
     - 'build'
