--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,36 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:  
-  name: deployment-1
-  namespace: default
-spec:  
-  replicas: 1  
+metadata:
+  name: my-spring-boot-app
+spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: deployment-1
+      app: my-spring-boot-app
   template:
+    metadata:
       labels:
-        app: deployment-1
+        app: my-spring-boot-app
     spec:
       containers:
-      - image: gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest
-        name: my-spring-boot-app
+      - name: spring-boot-container
+        image: gcr.io/primordial-veld-442819-k2/my-spring-boot-app:$COMMIT_SHA
         ports:
         - containerPort: 8080
-          name: http
----
- 
-apiVersion: apps/v1
-kind: Service
-metadata:  
-  name: deployment-1-service
-  labels:
-    run: deployment-1-service
-spec:  
-    ports:
-    -   port: 80
-        protocol: TCP
-    type: LoadBalancer
-    selector:
-        run: deployment-1-service
-    
