--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,13 +17,12 @@ steps:
     - 'push'
     - 'gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest'
 
-# Deploy to Kubernetes
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
-      - 'apply'
-      - '-f'
-      - 'deployment.yaml'
-      
+    - 'set'
+    - 'image'
+    - 'deployment/deployment-1'
+    - 'spring-boot-container=gcr.io/primordial-veld-442819-k2/my-spring-boot-app:$COMMIT_SHA'
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1' 
     - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
