--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
     - 'set'
     - 'image'
     - 'deployment/deployment-1'
-    - 'spring-boot-container=gcr.io/primordial-veld-442819-k2/my-spring-boot-app:$COMMIT_SHA'
+    - 'gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest'
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1' 
     - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
