--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -20,9 +20,9 @@ steps:
 # Deploy to Kubernetes    
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
-      - 'rollout'
-      - 'restart'
-      - 'deployment/deployment-1'
+      - 'apply'
+      - '-f'
+      - 'deployment.yaml'
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1' 
     - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
