--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,10 +14,9 @@ steps:
 # Deploy to Kubernetes    
 - name: 'gcr.io/cloud-builders/kubectl'
   args:
-    - 'set'
-    - 'image'
-    - 'deployment/deployment-1'
-    - 'spring-boot-container=gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest'
+      - 'apply'
+      - '-f'
+      - 'deployment.yaml'      
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=us-central1' 
     - 'CLOUDSDK_CONTAINER_CLUSTER=autopilot-cluster-1'
