--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,37 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: "apps/v1"
+kind: "Deployment"
 metadata:
-  name: deployment-1
+  name: "deployment-1"
+  namespace: "default"
+  labels:
+    app: "deployment-1"
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: deployment-1
+      app: "deployment-1"
   template:
     metadata:
       labels:
-        app: deployment-1
+        app: "deployment-1"
     spec:
       containers:
-      - name: spring-boot-container
-        image: gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest
-        ports:
-        - containerPort: 8080
+      - name: "my-spring-boot-app-sha256-1"
+        image: "gcr.io/primordial-veld-442819-k2/my-spring-boot-app:latest"
+---
+apiVersion: "v1"
+kind: "Service"
+metadata:
+  name: "deployment-1-service"
+  namespace: "default"
+  labels:
+    app: "deployment-1"
+spec:
+  ports:
+  - protocol: "TCP"
+    port: 80
+    targetPort: 8080
+  selector:
+    app: "deployment-1"
+  type: "LoadBalancer"
+  loadBalancerIP: ""
