pub sub message publish

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=gcp
 spring.cloud.gcp.project.id = primordial-veld-442819-k2
 spring.cloud.gcp.pubsub.project-id: primordial-veld-442819-k2
-spring.cloud.gcp.credentials.location = classpath:primordial-veld-442819-k2-729b0c258a0c.json
+spring.cloud.gcp.credentials.location = classpath:primordial-veld-442819-k2-33099182cb44.json
 spring.cloud.gcp.spanner.instance-id=bf-spanner
 spring.cloud.gcp.spanner.database=brandfolder
 spring.cloud.gcp.bucket=bf-response-bucket
 spring.cloud.gcp.pubsub.enabled=true
 spring.cloud.gcp.pubsub.subscription-name=bf-webhook-sub
+spring.cloud.gcp.pubsub.topic-name=bf-webhook
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=com.google.cloud.spanner.hibernate.SpannerDialect
