openapi.yaml update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.cloud.gcp.bucket=bf-response-bucket
 spring.cloud.gcp.pubsub.enabled=true
 spring.cloud.gcp.pubsub.subscription-name=bf-webhook-sub
 spring.cloud.gcp.pubsub.topic-name=bf-webhook
+pubsub.process.message.limit=20
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=com.google.cloud.spanner.hibernate.SpannerDialect
