--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ bf.asset.url=http://brandfolder.com/api/v4/brandfolders/x99bv7m9qxwvtcm8txg8r37/
 bf.attachment.url=http://brandfolder.com/api/v4/brandfolders/x99bv7m9qxwvtcm8txg8r37/attachments?fields=cdn_url&search=(asset_key:{assetkey})
 web.brandfolder.api.timeout=2000
 
-logging.level.com.costco=DEBUG
+logging.level.com.costco=INFO
